# dart-bias-correct

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/dart_bias_correct/: __init__.py  forecast.py  precipitation.py  util.py
tests/: test_forecast.py
tests/data/: HCMC-2025-06-24-ecmwf.forecast.nc
